Completed Project Summery API
